{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 124,
  "lineage": "ebb2f261-3ad7-c5af-eab5-ef6e55733360",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9c942bd7bf113a2",
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:instance/i-093ae86fab1e02b43",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093ae86fab1e02b43",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a51c7192e23386c3",
            "private_dns": "ip-172-5-100-116.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.5.100.116",
            "public_dns": "ec2-13-124-139-97.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.139.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:386147755255:key/79b9df45-65aa-42e6-bc67-01b4dfb52c3f",
                "tags": {
                  "Name": "test-ec2-1-root"
                },
                "throughput": 125,
                "volume_id": "vol-04ea7f924c2140802",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b16bd602084f25d",
            "tags": {
              "Name": "test-ec2-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "test-ec2-1",
              "Repository": "terraform-repo",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fcbeeead7f17fe7"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_availability_zones.azs",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9c942bd7bf113a2",
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:instance/i-031df244a43b09a73",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031df244a43b09a73",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0868970c5fe2b21a6",
            "private_dns": "ip-172-5-101-10.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.5.101.10",
            "public_dns": "ec2-43-200-74-71.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.74.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:386147755255:key/79b9df45-65aa-42e6-bc67-01b4dfb52c3f",
                "tags": {
                  "Name": "test-ec2-2-root"
                },
                "throughput": 125,
                "volume_id": "vol-0373d49772bd09fe4",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00deee495a3dffdab",
            "tags": {
              "Name": "test-ec2-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "test-ec2-2",
              "Repository": "terraform-repo",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fcbeeead7f17fe7"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_availability_zones.azs",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9c942bd7bf113a2",
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:instance/i-08e7a6b0ccce70f3a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e7a6b0ccce70f3a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a28507a1e92ebee",
            "private_dns": "ip-172-5-102-217.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.5.102.217",
            "public_dns": "ec2-13-125-241-16.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.241.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:386147755255:key/79b9df45-65aa-42e6-bc67-01b4dfb52c3f",
                "tags": {
                  "Name": "test-ec2-3-root"
                },
                "throughput": 125,
                "volume_id": "vol-0db8b8353def60c50",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a036520ba3fe64f3",
            "tags": {
              "Name": "test-ec2-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "test-ec2-3",
              "Repository": "terraform-repo",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fcbeeead7f17fe7"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_availability_zones.azs",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9c942bd7bf113a2",
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:instance/i-02b8ac85d2f95abdb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b8ac85d2f95abdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e606502034007358",
            "private_dns": "ip-172-5-103-9.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.5.103.9",
            "public_dns": "ec2-3-36-101-212.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.101.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:386147755255:key/79b9df45-65aa-42e6-bc67-01b4dfb52c3f",
                "tags": {
                  "Name": "test-ec2-4-root"
                },
                "throughput": 125,
                "volume_id": "vol-091ff86c300e687ab",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a831bd0a7fc67ba2",
            "tags": {
              "Name": "test-ec2-4"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "test-ec2-4",
              "Repository": "terraform-repo",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fcbeeead7f17fe7"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_availability_zones.azs",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "test-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:security-group/sg-09fcbeeead7f17fe7",
            "description": "test sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fcbeeead7f17fe7",
            "ingress": [],
            "name": "test-sg",
            "name_prefix": "",
            "owner_id": "386147755255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "test-sg",
              "Repository": "terraform-repo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eea9fb408b3ee7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "121.134.221.250/32"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-3829170568",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09fcbeeead7f17fe7",
            "security_group_rule_id": "sgr-09cbf101a24f77c6f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:internet-gateway/igw-0f0801f6eaba3d201",
            "id": "igw-0f0801f6eaba3d201",
            "owner_id": "386147755255",
            "tags": {
              "Name": "dummy-vpc-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "dummy-vpc-igw",
              "Repository": "terraform-repo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0eea9fb408b3ee7b7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:route-table/rtb-0656cac750c993edd",
            "id": "rtb-0656cac750c993edd",
            "owner_id": "386147755255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0801f6eaba3d201",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dummy-vpc-public-rtb"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "dummy-vpc-public-rtb",
              "Repository": "terraform-repo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eea9fb408b3ee7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f48fe10efb7d4dc0",
            "route_table_id": "rtb-0656cac750c993edd",
            "subnet_id": "subnet-00b16bd602084f25d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rtb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072fe8b53d4d589d5",
            "route_table_id": "rtb-0656cac750c993edd",
            "subnet_id": "subnet-00deee495a3dffdab"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rtb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0533844536109c40d",
            "route_table_id": "rtb-0656cac750c993edd",
            "subnet_id": "subnet-0a036520ba3fe64f3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rtb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0f26c322185ecb4",
            "route_table_id": "rtb-0656cac750c993edd",
            "subnet_id": "subnet-0a831bd0a7fc67ba2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rtb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:subnet/subnet-00b16bd602084f25d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.5.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b16bd602084f25d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386147755255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-ap-northeast-2a-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "public-ap-northeast-2a-subnet",
              "Repository": "terraform-repo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0eea9fb408b3ee7b7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:subnet/subnet-00deee495a3dffdab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "172.5.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00deee495a3dffdab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386147755255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-ap-northeast-2b-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "public-ap-northeast-2b-subnet",
              "Repository": "terraform-repo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0eea9fb408b3ee7b7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:subnet/subnet-0a036520ba3fe64f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.5.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a036520ba3fe64f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386147755255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-ap-northeast-2c-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "public-ap-northeast-2c-subnet",
              "Repository": "terraform-repo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0eea9fb408b3ee7b7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:subnet/subnet-0a831bd0a7fc67ba2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "172.5.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a831bd0a7fc67ba2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386147755255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-ap-northeast-2d-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "public-ap-northeast-2d-subnet",
              "Repository": "terraform-repo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0eea9fb408b3ee7b7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:386147755255:vpc/vpc-0eea9fb408b3ee7b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.5.0.0/16",
            "default_network_acl_id": "acl-0d0778c186157dd50",
            "default_route_table_id": "rtb-0a2f803979922c8dd",
            "default_security_group_id": "sg-0145aefde210ba69e",
            "dhcp_options_id": "dopt-0724331150ebe6324",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eea9fb408b3ee7b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2f803979922c8dd",
            "owner_id": "386147755255",
            "tags": {
              "Name": "dummy-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Maintainer": "patrick",
              "Name": "dummy-vpc",
              "Repository": "terraform-repo",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}